After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 676486 - Missing scrollbars when zooming a SVG image
Missing scrollbars when zooming a SVG image
Status: RESOLVED FIXED
Product: eog
Classification: Core
Component: image viewer
3.4.x
Other Linux
: Normal normal
: ---
Assigned To: EOG Maintainers
EOG Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-05-21 11:24 UTC by Sergio Villar
Modified: 2012-06-08 16:49 UTC
See Also:
GNOME target: ---
GNOME version: 3.3/3.4



Description Sergio Villar 2012-05-21 11:24:05 UTC
I opened the gnome-stencils.svg (the SVG file with GNOME3 symbolic icons) in eog and zoomed it in and out. The problem is that there are no scrollbars so certain parts of the file became unreachable as I zoom in.

It's not a generic SVG issue as it works for some other images. The actual file is src/gnome-stencils.svg in the gnome-icon-theme-symbolic module from git.gnome.org
Comment 1 Felix Riemann 2012-05-21 19:31:57 UTC
Hmm, there seems to be some disagreement between eog and the SVG drawing routines about which part of the SVG is the actual image.

If you color the transparent parts differently you can see that eog thinks that the 16x16px battery icon is the image but the whole SVG is drawn anyway.

Not sure yet where the error is.
Comment 2 Felix Riemann 2012-06-08 16:49:37 UTC
The problem was on our side as we were offering the whole image area to librsvg to draw to. That made it render the image data that is outside of the SVG page.

We are now clipping SVGs to the image area as we do with other pictures already.

commit 3fb558e1861d3d75bca23946fcf3f62c80daeeec
Author: Felix Riemann <>
Date:   Fri Jun 8 18:40:20 2012 +0200

    EogScrollView: Clip SVGs to the visible image area
    
    This avoids showing image data present in those images but outside
    of the defined image boundaries. That could make the UI look like
    it is misbehaving (e.g. not showing scrollbars).
    
    https://bugzilla.gnome.org/show_bug.cgi?id=676486
---
This problem has been fixed in our software repository. The fix will go into the next software release. Thank you for your bug report.