EogScrollView: Clip SVGs to the visible image area

This avoids showing image data present in those images but outside
of the defined image boundaries. That could make the UI look like
it is misbehaving (e.g. not showing scrollbars).

https://bugzilla.gnome.org/show_bug.cgi?id=676486